<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/timer_hint"
                android:textColor="@color/blue"
                android:padding="12dp"
                android:textSize="19sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1e90ff"
        android:orientation="horizontal" >
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
        
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/validtime_edittext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_text" 
                android:textSize="16sp" />


        <EditText
            android:id="@+id/validtime_edittext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                        android:gravity="center"
            
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_text" 
                            android:textSize="16sp" />
            

        <EditText
            android:id="@+id/validtime_edittext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
                        android:gravity="center"
            
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_text" 
                android:textSize="16sp" />


        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
         android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/validtime_button1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/solid_blue"
                android:layout_marginTop="10dp"
              
             
                android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                android:text="@string/sure_text" 
                android:textSize="16sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>