<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/text_edit"
                android:textColor="@color/blue"
                android:textSize="19sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1e90ff"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/textedit_edittext1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/frame_none"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/textedit_confirm_button1"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/frame_grey"
                android:text="@string/save"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/textedit_confirm_button2"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/frame_grey"
                android:text="@string/cancle"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>